--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>SankizBase - Create your SankizBase Account For Free!</title>
-	<link rel="stylesheet" type="text/css" href="css/create.css">
+	<link rel="stylesheet" type="text/css" href="create.css">
 </head>
 <body>
 	<!-- container section starts -->
